THE AUTHORIZATION FLOW IS FINALLY WORKING I AM FREEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
     <div class="loginBox">
         <div class="left">
             <h1 class="title">Sign In</h1>
-            <form th:action="@{/auth/login}" method="post" class="form">
+            <form th:action="@{/login_process}" method="post" class="form">
                 <p class="registerText">
                     Please enter your login credentials<br/>
                     or <a th:href="@{/auth/register}" class="link">click here</a> to register.
