--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,7 +13,7 @@
                 <p class="registerText">
                     Create a new account or <a th:href="@{/login}" class="link">click here</a> to login.
                 </p>
-
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <div class="formMain">
                     <div class="inputGroup">
                         <input class="input"
