--- a/frontend/src/styles/root/color.pattern.css
+++ b/frontend/src/styles/root/color.pattern.css
@@ -5,7 +5,7 @@
     --primary-color: #141414;
     --secondary-color: #2D2D2D;
     --placeholder-color: #818181;
-    --highlight-color: #00D8FF;
+    --highlight-color: #000000;
     --highlight-secondary-color: #00A8D2;
     --text-color: #dddddd;
 
