--- a/frontend/src/styles/modules/expressionList.module.css
+++ b/frontend/src/styles/modules/expressionList.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     flex: 1;
     overflow-y: auto;
+    /* Sombra igual que en .keyboardContainer */
+    box-shadow: 0px -2px 20px 0px #000c;
 }
 
 .inputWrapper {
@@ -15,6 +17,8 @@
     border: 2px solid transparent;
     padding: 0.25rem 0.5rem;
     transition: border-color 0.15s ease;
+    /* Sombra igual que en .keyboardContainer */
+    box-shadow: 0px -2px 20px 0px #000c;
 }
 
 .rowHighlighted {
@@ -26,6 +30,8 @@
     display: flex;
     align-items: center;
     position: relative;
+    margin-bottom: -0.2rem;
+    animation: fadeInMenu 0.15s;
 }
 
 .functionLabel {
@@ -37,6 +43,7 @@
     border: 2px solid transparent;
     border-radius: 0.5rem;
     margin-right: 0.5rem;
+    margin-left: -0.15rem;
     flex-shrink: 0;
     transition: border-color 0.15s ease;
 }
@@ -154,7 +161,6 @@
     white-space: nowrap; /* evitar salto de línea después del "=" */
 }
 
-
 .sliderRow {
     display: flex;
     flex-direction: column;
@@ -190,4 +196,3 @@
     background: #1e1e1e;
     color: #e0e0e0;
 }
-
