--- a/frontend/src/styles/modules/dialog.module.css
+++ b/frontend/src/styles/modules/dialog.module.css
@@ -3,7 +3,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: var(--background-color);
+    background: var(--login-background-color);
 }
 
 .toast {
